# cov-watchdog

./: Cargo.toml  README.md
.github/workflows/: build-release.yml
src/: main.rs
